--- a/index.html
+++ b/index.html
@@ -385,7 +385,10 @@
 
             <div class="my-details-info-container">
               <i class="fas fa-map-marker-alt"></i>
-              <span>Nemi Nagar Colony,Behind Jain Mandir,Damoh</span>
+              <span
+                >Nemi Nagar Colony,Behind Jain Mandir,Damoh(Madhya
+                Pradesh)</span
+              >
             </div>
             <div class="my-details-info-container">
               <i class="fas fa-mobile-alt"></i>
